<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#BFF185"
    tools:context="com.saurabh.discussit.MainMenuActivity">
    <Button
        android:id="@+id/Read_Button"
        android:text="@string/Read_Articles"
        android:onClick="gotoArticleShow"
        android:layout_weight="1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Subject_Select"
        android:text="@string/sub_choose"
        android:layout_weight="1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editSubjectList"/>
    <Button
        android:id="@+id/Discuss"
        android:text="@string/discuss"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startChat"/>
    <Button
        android:id="@+id/Publish_Article"
        android:text="@string/pub_article"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="publishArticle"/>
    <Button
        android:id="@+id/article_show"
        android:text="@string/my_articles"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showArticles"/>
    <Button
        android:id="@+id/published_articles_btn"
        android:text="@string/read_user_articles"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showUserArticles"/>
    <Button
        android:id="@+id/logoutfrmmain"
        android:text="@string/logout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logoutfrommain"/>

</LinearLayout>
