<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#69F591"
    android:gravity="center"
    tools:context="com.saurabh.discussit.LoginActivity">

    <EditText
        android:id="@+id/uname"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/pword"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:background="#E8A43E"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.facebook.widget.LoginButton
        android:id="@+id/fb_lgn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
