<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#DEF5F4"
    tools:context="com.saurabh.discussit.UserArticleActivity">
    <TextView
        android:id="@+id/title_text"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textSize="20dp"
        android:background="#82FA13"
        android:textStyle="italic"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

       <TextView
        android:id="@+id/articleText"
        android:background="#BFEDEB"
        android:maxLines="1000"
        android:scrollbars="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/pub_saved_btn"
            android:text="@string/publish_article"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/del_saved_btn"
            android:text="@string/delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/share"
            android:id="@+id/share_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="share"
            android:visibility="invisible"/>
        </LinearLayout>

</LinearLayout>
